[Fix] Z-index for Day stamp

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -96,6 +96,7 @@ input:disabled{
 .emoji-mart{
     position: absolute !important;
     top: -700%;
+    z-index: 999;
     left: 0;
     width: 30vw !important;
 }
